2006-07-24  Hendrik Tews  <tews@debian>

	* started support for circular structures
	  Potentially circular pointers get the ocaml type xxx option ref.
	  First None is assigned and the pointer is enqueued in 
	  postponed_circles in ToOcamlData. Later the pointer is
	  serialized in finish_circular_pointers and the reference is
	  updated with some Some x.
	* identified two circurlar points until now

2006-07-20  Hendrik Tews  <tews@debian>

	* remove new vendor files again

2006-07-20  Hendrik Tews  <tews@localhost.localdomain>

	ELSA
	* rename Variable.value -> Variable.varValue (Variable.value
	  clashes with ocaml value) 
	* started ocaml serialization for Variable's
	* hand translated variable type is mutually recursive with other
	  astgen ast types. These recursive types are now in a separate
	  ml_ctype.ast file, which is processed by astgen.
	* some debugging changes to explore the backward pointer problem
	  (will be undone later)	

2006-06-21  Hendrik Tews  <tews@debian>

	* fixed ocaml_val init bug

2006-06-19  Hendrik Tews  <tews@tandem.cs.ru.nl>

	AST
	* remove elements from the ToOcamlData stack

	ELSA
	* ocaml serialization for CType's
	* hand translation for the CType hierarchy

	* CompoundType::bases (which was of type const ObjList<BaseClass>)
	  changed into non-const & protected
	* use const ObjList<BaseClass> & get_bases() to access the bases
	  list

	* moved function calls out of caml_callback
	* fixed init bug in Scope::Scope (from Scott)
	


2006-05-15  Hendrik Tews  <tews@localhost.localdomain>

	ELSA
	* added non-closure assertions to hand written serialization funcs

	SEMANTIC
	* adopted ml code to the changed ast

	AST
	* merged AnnotationField into CtorArg, renamed the latter into
	FieldOrCtorArg
	* added "field" marked fields to the ocaml ast
	* added check in generated code that tests for the right number of
	arguments for ocaml callbacks
	* enabled nullable flag for fields

	ELSA
	* added nullable to all fields that might be NULL
